--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -3,5 +3,177 @@
 }
 body {
     margin: 0px;
-    font-family: sans-serif;
+    font-family: serif;
+    background-color: #ffdd6e;
+}
+/*NAVBAR*/
+#logo {
+    padding-top: 10px;
+}
+#navbar-top {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: #388df9;
+}
+#navbar {
+    background: linear-gradient(
+        #388df9,
+        #83b9ff
+    );
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+#navbar a {
+    display: inline-block;
+    padding: 24px;
+    text-decoration: none;
+    color: #ffdd6e;
+}
+#navbar #logo {
+    margin-right: auto;
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+#navbar a:hover {
+    background: linear-gradient(
+        to bottom,
+        #83b9ff,
+        #388df9
+    );
+}
+.dropdown-container {
+    position: relative;
+}
+.dropdown-menu {
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    transition:
+        opacity .5s,
+        visibility .5s
+    ;
+    z-index: 0px;
+}
+.dropdown-menu a {
+    background-color: #83b9ff;
+    width: 100%;
+    min-width: 200px;
+}
+.dropdown-container:hover .dropdown-menu {
+    background: #83b9ff;
+    opacity: 1;
+    visibility: visible;
+}
+/*CARD*/
+#cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+.card {
+    flex: 300px;
+    border: 3px solid #f56a59;
+    margin: 24px;
+    padding: 24px;
+    border-radius: 12px;
+    text-align: center;
+}
+.card a {
+    text-decoration: none;
+    color:black;
+    display: block;
+    border: 3px solid #f56a59;
+    padding: 12px;
+    margin-top: 36px;
+    transition:
+        background-color .5s,
+        color .3s
+    ;
+}
+.card a:hover { 
+    background-color: #f56a59;
+    border: 3px solid #f56a59;
+    color: #ffdd6e;
+}
+#card1 {
+    transition:
+        background-color .5s,
+        box-shadow .5s,
+        transform .3s
+    ;
+}
+#card1:hover {
+    background-color:#83b9ff;
+    box-shadow: 5px 5px 5px rgba(239, 125, 125, 0.382);
+    transform: translateY(-4px);
+}
+/*AUDIO*/
+#audio {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+#volume {
+    font-size: 12px;
+}
+/*CARDS*/
+#centered-column {
+    width: 90vw;
+    max-width: 800px;
+    margin: 48px auto;
+    display: flex;
+    gap: 36px;
+    justify-content: center;
+}
+.cards {
+    width: 350px;
+    border: 2px solid #388df9;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: -4px 4px 12px #ceaaaa;
+    background: linear-gradient(
+        #388df9,
+        #83b9ff
+    );
+    display: flex;
+    flex-direction: column;
+}
+.cards img{
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+.cards p{
+    font-size: 18px;
+    flex: 1;
+    justify-content: center;
+    text-align: center;
+}
+.cards a {
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+    display: inline-block;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    border: 3px solid #ffdd6e;
+    background-color: #ffdd6e;
+    transition: 
+        background-color .5s,
+        color .5s,
+        transform .3s
+        
+}
+.cards a:hover {
+    background-color: #f56a59;
+    border: 3px solid #f56a59;
+    color: #ffdd6e;
+    transform: translateY(-4px);
 }
