--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -539,6 +539,33 @@ input[type=submit]:hover {
     text-align: center;
 }
 /********************
+PHOTOGRAPHY
+********************/
+#photos {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+#photos h3 {
+    text-align: center;
+    font-size: 5vw;
+}
+#photos .horizontal-masonry-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    padding: 35px;
+    margin: 25px;
+    background-color: #388df9;
+    border: 10px solid #f56a59;
+}
+#photos .horizontal-masonry-gallery img {
+    width: 20vw;
+    flex: 1;
+    object-fit: cover;
+}
+
+/********************
 GRAPHICS
 ********************/
 #graphics {
