--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1552,6 +1552,7 @@ PHONE QUERY
             #83b9ff
         );
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         text-align: center;
@@ -1571,16 +1572,15 @@ PHONE QUERY
     }
     .dropdown-container {
         position: relative;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    .dropdown-container i{
+        display: none;
     }
     .dropdown-menu {
-        position: absolute;
-        opacity: 0;
-        visibility: hidden;
-        transition:
-            opacity .5s,
-            visibility .5s
-        ;
-        z-index: 0px;
+        display: none;
     }
     .dropdown-menu a {
         background-color: #83b9ff;
