--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1836,7 +1836,7 @@ PHONE QUERY
         flex-direction: column;
         background-color: white;
         border: 2px solid #f56a59;
-        margin: 50px 50px;
+        margin: 50px 20px;
         padding: 30px 0px;
         justify-content: center;
         align-items: center;
@@ -1848,16 +1848,25 @@ PHONE QUERY
     #title {
         display: flex;
         align-items: baseline;
+        justify-content: center;
     }
     #title i{
         display: none;
     }
+    #about li {
+        padding: 7px 0px;
+        font-size: 13px;
+    }
+    #about p {
+        font-size: 15px;
+    }
+
     #bio {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        padding: 0px 100px;
+        padding: 0px 20px;
         text-align: center;
     }
     #biotxt a {
@@ -1872,7 +1881,7 @@ PHONE QUERY
         list-style: none;
         padding-right: 35px;
     }
-    #biotxt a:hover {
+    #biotxt a:active {
         color: #f56a59;
     }
     #me {
@@ -2086,8 +2095,8 @@ PHONE QUERY
         justify-content: center;
         object-fit: fill;
         object-position: center;
-        width: 536px;
-        height: 525px;
+        width: 346px;
+        height: 405px;
         transition:
             background-image .5s
         ;
@@ -2146,6 +2155,11 @@ PHONE QUERY
         justify-content: center;
         text-align: center;
     }
+    .row {
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
     .row #bearhr{
         align-items: center;
         justify-content: center;
@@ -2155,17 +2169,16 @@ PHONE QUERY
         width: 75%;
         align-items: center;
         justify-content: center;
+        text-align: center;
     }
     .rightcolumn {
         display: none;
         visibility: hidden;
     }
-      
     .blogimg {
         width: 100%;
         padding: 0px;
     }
-    
     .card {
         background-color: white;
         padding: 20px;
@@ -2175,14 +2188,6 @@ PHONE QUERY
         background-position: bottom;
         background-repeat: no-repeat;
         object-fit: fill;
-    }
-    .socialcard {
-        display: none;
-    }
-    .row:after {
-        content: "";
-        display: table;
-        clear: both;
     }
     #socials {
         display: none;
