--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -255,7 +255,8 @@ marquee {
     width: 15vw;
 }
 #audio3 {
-    display: none;
+    justify-content: center;
+    text-align: center;
 }
 /*CARDS*/
 #centered-column {
@@ -659,14 +660,31 @@ ILLUSTRATIONS
     width: 40vw;
     justify-content: center;
 }
+#aria #ariafiori {
+    width: 40vw;
+    justify-content: center;
+}
 /********************
 CLASSWORK - GRAPHICS
 ********************/
 #images {
     display: flex;
     flex-direction: column;
+}
+#classtitle h1 {
     justify-content: center;
     align-items: center;
+    text-align: center;
+}
+#classtitle img {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+#images .horizontal-masonry-gallery {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 .classworkimg {
     width: 30vw;
@@ -1050,7 +1068,8 @@ TABLET QUERY
         width: 15vw;
     }
     #audio3 {
-        display: none;
+        justify-content: center;
+        text-align: center;
     }
     /*CARDS*/
     #centered-column {
@@ -1836,7 +1855,8 @@ PHONE QUERY
         width: 15vw;
     }
     #audio3 {
-        display: none;
+        justify-content: center;
+        text-align: center;
     }
     /*CARDS*/
     #centered-column {
